// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should expire if maxAge is set 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo",
    },
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should expire if maxAge is set 2`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": true,
    "rejected": false,
    "value": Object {
      "value": "foo",
    },
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should expire if maxAge is set 3`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": true,
    "rejected": false,
    "value": Object {
      "value": "foo",
    },
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should not rerun promises if previous promise was rejected 1`] = `
Array [
  Object {
    "fulfilled": false,
    "pending": false,
    "reason": "foo",
    "refreshing": false,
    "rejected": true,
    "value": null,
  },
  Object {
    "args": null,
    "ssr": false,
  },
]
`;

exports[`should not run promises if both \`autoRefresh\` and \`isForced\` are false 1`] = `
Array [
  Object {
    "fulfilled": false,
    "pending": true,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": null,
  },
  Object {
    "ssr": false,
  },
]
`;

exports[`should not run promises when awaiting 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo",
    },
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should not try to rerun fulfilled promises if \`value\` is null 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": null,
  },
  Object {
    "args": Array [
      null,
    ],
    "ssr": false,
  },
]
`;

exports[`should refresh a promise if forced 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": "foo1",
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should refresh a promise if forced 2`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": true,
    "rejected": false,
    "value": "foo1",
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should refresh a promise if forced 3`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": "foo2",
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should rehydrate ssr data 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": "foo",
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should rerun promises if previous promise was rejected but \`isForced\` is true 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo",
    },
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;

exports[`should return cached values when \`args\` change 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo-false",
    },
  },
  Object {
    "args": Array [
      "foo-false",
    ],
    "ssr": false,
  },
]
`;

exports[`should return cached values when \`args\` change 2`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo-true",
    },
  },
  Object {
    "args": Array [
      "foo-true",
    ],
    "ssr": false,
  },
]
`;

exports[`should return cached values when \`args\` change 3`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo-false",
    },
  },
  Object {
    "args": Array [
      "foo-false",
    ],
    "ssr": false,
  },
]
`;

exports[`should run promises if \`autoRefresh\` is false but \`isForced\` is true 1`] = `
Array [
  Object {
    "fulfilled": true,
    "pending": false,
    "reason": null,
    "refreshing": false,
    "rejected": false,
    "value": Object {
      "value": "foo",
    },
  },
  Object {
    "args": Array [
      "foo",
    ],
    "ssr": false,
  },
]
`;
